--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         git config --global user.email "action@github.com"
         echo "GIT_TERMINAL_PROMPT=0" >> $GITHUB_ENV
 
-    - name: Prepare workspace directory (强制用大盘挂载点)
+    - name: Prepare workspace directory
       run: |
         set -e
         mkdir -p "$GITHUB_WORKSPACE/lineage"
@@ -154,7 +154,6 @@ jobs:
         echo "== repo sync =="
         repo sync -c -j1 --fail-fast --force-sync --no-clone-bundle --no-tags --optimized-fetch --prune
 
-    # ✅✅✅ 关键：defconfig 选择逻辑（完整替换版）
     - name: Patch defconfig (auto-pick maple defconfig; enable CXD224X, disable PN553)
       run: |
         set -euo pipefail
@@ -169,12 +168,6 @@ jobs:
         echo "== Available defconfigs (top) =="
         ls -1 "$CFG_DIR" | sed -n '1,120p'
 
-        # 优先级：
-        # 1) maple 专用 defconfig（单卡）
-        # 2) maple_dsds（双卡）
-        # 3) poplar_kddi（你备用参考）
-        # 4) poplar/lilac（兜底）
-        # 5) defconfig（最后兜底）
         CANDIDATES=(
           "$CFG_DIR/lineage-msm8998-yoshino-maple_defconfig"
           "$CFG_DIR/lineage-msm8998-yoshino-maple_dsds_defconfig"
@@ -192,7 +185,6 @@ jobs:
           fi
         done
 
-        # 如果候选都没命中，那就自动搜索：任何包含 maple 的 lineage defconfig
         if [ -z "$CONFIG_FILE" ]; then
           echo "!! candidates not found, trying auto-search for maple defconfig..."
           FOUND="$(ls -1 "$CFG_DIR"/lineage*-maple*_defconfig 2>/dev/null | head -n 1 || true)"
@@ -208,8 +200,6 @@ jobs:
         fi
 
         echo "✅ Using defconfig: $CONFIG_FILE"
-        echo "== Before patch (related lines) =="
-        grep -nE "CONFIG_SONY_CXD224X=|CONFIG_NFC_PN553=|# CONFIG_NFC_PN553 is not set" "$CONFIG_FILE" || true
 
         set_kcfg() {
           local key="$1" val="$2" file="$3"
@@ -220,13 +210,8 @@ jobs:
           fi
         }
 
-        # ✅ 打开 Sony CXD224X
         set_kcfg CONFIG_SONY_CXD224X y "$CONFIG_FILE"
-
-        # ✅ 关闭 PN553（用两种方式保证最终是 off）
-        # 1) 如果存在 CONFIG_NFC_PN553=... 就改成 n
         set_kcfg CONFIG_NFC_PN553 n "$CONFIG_FILE"
-        # 2) 补一句更常见的 Kconfig 关闭写法（避免某些构建系统忽略 =n）
         if ! grep -qE "^# CONFIG_NFC_PN553 is not set" "$CONFIG_FILE"; then
           echo "# CONFIG_NFC_PN553 is not set" >> "$CONFIG_FILE"
         fi
@@ -244,15 +229,20 @@ jobs:
           device/sony/maple device/sony/yoshino-common kernel/sony/msm8998/arch/arm64/boot/dts \
           || true
 
-        echo "== List maple DT related files (best effort) =="
-        find device/sony/maple -maxdepth 3 -type f \( -iname "*dts*" -o -iname "*dtbo*" \) 2>/dev/null || true
-
-    - name: Build Boot Image (kernel-only target)
+    - name: Build Boot Image (kernel-only target) - fix TOP unbound
       run: |
-        set -euo pipefail
+        set -eo pipefail
         cd "$WORKDIR"
 
+        # ✅ envsetup.sh 在某些实现里会引用未定义变量；避免 set -u 触发崩溃
+        set +u
+        export TOP="$PWD"
+
         source build/envsetup.sh
+
+        # 恢复严格模式（仍保留 -e）
+        set -u
+
         export ALLOW_MISSING_DEPENDENCIES=true
         export BUILD_BROKEN_MISSING_REQUIRED_MODULES=true
         export BUILD_BROKEN_ELF_PREBUILT_PRODUCT_COPY_FILES=true
